# deduplication_analysis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  GITHUB_SETUP.md  IMPROVEMENT_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  README.md  TROUBLESHOOTING.md  benchmark_image.py  command.md  dedupe_audio_fingerprints.py  dedupe_audio_fingerprints1.py  dedupe_videos_vphash.py  dedupl_images_phash.py  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs
src/audio/: fingerprint.rs  grouping.rs  meta.rs  mod.rs  quality.rs
src/common/: command.rs  config.rs  fs.rs  mod.rs  security.rs  stats.rs
src/dedupl/: __init__.py  audio.py  common.py  image.py
src/document/: fingerprint.rs  grouping.rs  meta.rs  mod.rs
src/image/: grouping.rs  meta.rs  mod.rs  phash.rs  quality.rs
src/video/: exts.rs  fingerprint.rs  grouping.rs  meta.rs  mod.rs
tests/: __init__.py  test_audio.rs  test_common.rs  test_image.rs
tests/unit/: test_audio.py  test_common.py  test_image.py
